--- a/index.html
+++ b/index.html
@@ -499,7 +499,7 @@
                         </div>
                     </div>
                     <div class="right-contact">
-                        <form method="post" class="contact-form">
+                        <form method="post" class="contact-form" id="rec_form">
                             <div class="input-control i-c-2">
                                 <input type="text" required placeholder="YOUR NAME" maxlength="25" id="rec_name">
                                 <input type="email" required placeholder="YOUR EMAIL" multiple id="rec_email">
