--- a/index.html
+++ b/index.html
@@ -472,7 +472,7 @@
                                     <span>Education</span>
                                 </div>
                                 <p>
-                                    <span>: Bachelor of Technology, SRM University</span>
+                                    <span>: B.Tech, SRM University</span>
                                 </p>
                             </div>
 
@@ -483,7 +483,7 @@
                                 </div>
                                 <p>
                                     <span>: English, Telugu, Kannada,
-                                        Tamil, Hindi</span>
+                                        Tamil & Hindi</span>
                                 </p>
                             </div>
                         </div>
