--- a/index.html
+++ b/index.html
@@ -472,7 +472,7 @@
                                     <span>Education</span>
                                 </div>
                                 <p>
-                                    <span>: B.Tech, SRM University</span>
+                                    <span>: Bachelor of Tecnology, SRM IST</span>
                                 </p>
                             </div>
 
