--- a/index.html
+++ b/index.html
@@ -523,7 +523,7 @@
                             
                             <div class="submit-btn">
                                 <a class="main-btn" id="rec_btn">
-                                    <span class="btn-text">Send</span>
+                                    <span class="btn-text">Submit</span>
                                     <span class="btn-icon"><i class="fa fa-send"></i></span>
                                 </a>
                             </div>
