--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div class="left-header">
                 <div class="h-shape"></div>
                 <div class="image">
-                    <img src="img/hero-1.png" alt="">
+                    <img src="img/profile.jpg" alt="">
                 </div>
             </div>
             <div class="right-header">
